--- a/src/options/index.html
+++ b/src/options/index.html
@@ -9,36 +9,32 @@
   <link rel="stylesheet" href="/options/style.css">
 </head>
 <body>
+<form>
   <table class="table">
     <caption>General</caption>
     <tbody>
     <tr>
-      <th>Message</th>
+      <th><label for="message">Message</label></th>
       <td><input id="message" type="text"></td>
     </tr>
     </tbody>
   </table>
-<table class="table">
-  <caption>About</caption>
-  <tbody>
-  <tr>
-    <th>Author</th>
-    <td><a href="https://centell.me">Centell</a></td>
-  </tr>
-  <tr>
-    <th>Github</th>
-    <td><a href="https://github.com/centell/pp">centell/pp</a></td>
-  </tr>
-  </tbody>
-</table>
-<div>
-  <div>
-    <button>save</button>
-  </div>
-  <div>
-    <button>reset</button>
-  </div>
-</div>
+  <table class="table">
+    <caption>About</caption>
+    <tbody>
+    <tr>
+      <th>Author</th>
+      <td><a href="https://centell.me">Centell</a></td>
+    </tr>
+    <tr>
+      <th>Github</th>
+      <td><a href="https://github.com/centell/pp">centell/pp</a></td>
+    </tr>
+    </tbody>
+  </table>
+  <button type="submit">Save</button>
+</form>
+
 <script src="/lib/browser-polyfill.min.js"></script>
 <script src="/options/script.js"></script>
 
